gap problem fixed

--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -3,14 +3,19 @@
   grid-template-columns: repeat(1, 1fr);
   justify-items: center;
   align-items: center;
-  gap: 48px;
+  gap: $card-gap;
 
-  margin: 0 auto;
+  margin: auto;
+  @include max-width("large");
 
   text-align: center;
 
   @media screen and (min-width: 488px) {
     grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    align-content: center;
+    @include max-width("small");
+
   }
 
   @media screen and (min-width: 768px) {
@@ -27,7 +32,7 @@
     justify-items: center;
     align-items: center;
 
-    width: 200px;
+    width: $card-width;
     height: 300px;
     border: 1px solid #ccc;
     border-radius: 5px;
